5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1795_1598.log
== TEST (2019-05-30 16:03:25) 
-- CODE:
from numpy import *
79.5 +125.25+250.75

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:03:26) 
-- CODE:
from numpy import *
79.5 +125.25+250.75

-- EXECUTION TIME:
0.517358
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:

-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:

-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:03:34) 
-- CODE:
from numpy import *
print(79.5 +125.25+250.75)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:04:08) 
-- CODE:
from numpy import *
print(79.5 +50.25+50.25)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:08) 
-- CODE:
from numpy import *
compras=array(int(input('Ditige')))
print(compras)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:33) 
-- CODE:
from numpy import *
compras=array(int(input('Ditige')))
print(compras)

i=0
compras=0

print(241.9+56,5+92.1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:51) 
-- CODE:
from numpy import *
compras=array(int(input('Ditige')))
print(compras)

i=0
compras=0

print(241.9 + 56,5 + 92.1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:11:56) 
-- CODE:
from numpy import *
compras=array(int(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		
		
		




-- EXECUTION TIME:
0.185304
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 13
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:12:02) 
-- CODE:
from numpy import *
compras=array(int(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		
		
		




-- EXECUTION TIME:
0.194057
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 13
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:12:07) 
-- CODE:
from numpy import *
compras=array(int(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		
		
		




-- EXECUTION TIME:
0.156751
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 13
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:46) 
-- CODE:
from numpy import *
compras=array(float(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		
		
		
		




-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:02) 
-- CODE:
from numpy import *
compras=array(float(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		
		
		
		




-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:22) 
-- CODE:
from numpy import *
compras=array(float(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras -5
		i=i+1
	else:
		compras
print(compras)
		
		
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:02) 
-- CODE:
from numpy import *
compras=array(int(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
	else:
		compras
print(compras)
		
		
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:27) 
-- CODE:
from numpy import *
compras=array(eval(int(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
	else:
		compras
print(compras)
		
		
		
		




-- ERROR:
File "XXXX", line 3
    print(compras)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:38) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
	else:
		compras
print(compras)
		
		
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:35) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
		
	else:
		compras
i=i+1
print(compras)
		
		
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:54) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
		
	else:
		compras
i=i+1
print(round(compras,2)
		
		
		
		




-- ERROR:
File "XXXX", line 20
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:19) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
		
	else:
		compras
	i=i+1
print(round(compras,2)
		
		
		
		




-- EXECUTION TIME:
0.301371
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 20
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:51) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
compras=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
	else:
		compras
	i=i+1
print(round(compras,2)
		
		
		
		




-- EXECUTION TIME:
0.27328
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 20
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:53) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
compras=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
	else:
		compras
	i=i+1
print(round(compras,2)
		
		
		
		




-- ERROR:
File "XXXX", line 20
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:50) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
compras=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
	else:
		compras
	i=i+1
	
print(round(compras,2)
		
		
		
		




-- ERROR:
File "XXXX", line 23
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:05) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
compras=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
	else:
		print(compras)
	
	
print(round(compras,2)
		
		
		
		




-- ERROR:
File "XXXX", line 23
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:16) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
compras=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
	else:
		compras=compras
		i=i+1
	
	
print(round(compras,2)
		
		
		
		




-- EXECUTION TIME:
0.284019
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 23
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:28) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
compras=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
	else:
		compras=compras
	i=i+1
	
print(round(compras,2)
		
		
		
		




-- EXECUTION TIME:
0.333535
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 22
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:59) 
-- CODE:
from numpy import *
compras=array(eval(int(input('Ditige')))
print(compras)
i=0
compras=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
	else:
		compras=compras
	i=i+1
	
print(round(compras,2)
		
		
		
		




-- ERROR:
File "XXXX", line 3
    print(compras)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:08) 
-- CODE:
from numpy import *
compras=array(eval(int(input('Ditige')))
i=0
compras=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
	else:
		compras=compras
	i=i+1
	
print(round(compras,2)
		
		
		
		




-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:25) 
-- CODE:
from numpy import *
compras=array(eval(int(input('Ditige')))
i=0
s=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
					 
	else:
		compras=compras
		i=i+1
	
print(round(compras,2)
		
		
		
		




-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:28) 
-- CODE:
from numpy import *
compras=array(eval(int(input('Ditige')))
i=0
s=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
					 
	else:
		compras=compras
		i=i+1
	
print(round(compras,2)
		
		
		
		




-- EXECUTION TIME:
0.276682
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:32) 
-- CODE:
from numpy import *
compras=array(eval(int(input('Ditige')))
i=0
s=0
while(i< len(compras)):
	
	if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
					 
	else:
		compras=compras
		i=i+1
	
print(round(compras,2))
		
		
		
		




-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:24:01) 
-- CODE:
from numpy import *
compras=array(eval(input('Ditige')))
print(compras)
i=0
while(i< len(compras)):
	if(compras[i] > 80 ):
		compras=compras-5
		
	else:
		compras
i=i+1
print(compras)
		
		
		
		




-- EXECUTION TIME:
383.881
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import *
compras=array(eval(int(input('Ditige: ))
i=0
s=0
while(i< len(compras)):
		if(compras[i] > 80 ):
		compras=compras-5
		i=i+1
					 
	else:
		compras=compras
		i=i+1
	
print(round(compras,2))
		
		
		
		




-- ERROR:
File "XXXX", line 2
    compras=array(eval(int(input('Ditige: ))
                                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:30) 
-- CODE:
from numpy import *
compras=eval(int(input("Digite:   ")))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(compras)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:55) 
-- CODE:
from numpy import *
compras=eval(int(input("Digite:   ")))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:09) 
-- CODE:
from numpy import *
compras=eval(float(input("Digite:   ")))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:45) 
-- CODE:
from numpy import *
compras=array(eval(float(input("Digite:   ")))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:55) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   ")))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:14) 
-- CODE:
from numpy import *
compras= array(eval(float(input("Digite:   ")))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:37) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:04) 
-- CODE:
from numpy import *
compras=array(eval(float(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:24) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:44) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:17) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:17) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:23) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
0.746699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:25) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
1.45631
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:26) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
2.38111
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:26) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
2.2457
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:26) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
2.379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[32,44,32.1,43.2]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:28) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
3.267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[32,44,32.1,43.2]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:29) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
3.14263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:30) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
2.00467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:30) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		compras=compras-5
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
2.10584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input("Digite:   "))))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:34:36) 
-- CODE:
from numpy import *
compras=array(eval(int(input("Digite:   "))))
i=0
s=0
while(i<len(compras)):
	if(compras[i]>80):
		
		i=i+1
	else:
		compras=compras[i]
		i=i+1
print(sum(compras))
		
-- EXECUTION TIME:
0.546399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1598/main.py", line 2, in <module>
    compras=array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:49) 
-- CODE:
from numpy import *
vetor=array(eval(float('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
print(sum(vetor[i]))

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:43:02) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
print(sum(vetor[i]))

		
-- EXECUTION TIME:
0.256172
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:04) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
print(sum(vetor[i]))

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:36) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
print(sum(vetor[i]))

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:42) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
print((vetor[i]))

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:44:45) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
print((vetor[i]))

		
-- EXECUTION TIME:
0.182893
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:45:08) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print((vetor[i]))

		
-- EXECUTION TIME:
0.216004
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:45:30) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print((vetor[i]))

		
-- EXECUTION TIME:
0.156705
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:36) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print((vetor[i]))

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:46:05) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print(round((vetor[i],2))

		
-- EXECUTION TIME:
0.139517
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:46:09) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print(round((vetor[i],2))

		
-- EXECUTION TIME:
0.154875
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:46:09) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print(round((vetor[i],2))

		
-- EXECUTION TIME:
0.182747
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:46:09) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print(round((vetor[i],2))

		
-- EXECUTION TIME:
0.262616
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:46:09) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
		s=s+vetor[i]
	else:
		vetor[i]=vetor[i]
		i=i+1
		s=s+vetor[i]		
print(round((vetor[i],2))

		
-- EXECUTION TIME:
0.319664
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:47:08) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round((vetor[i],2))

		
-- EXECUTION TIME:
0.147434
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:10) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round((vetor[i],2))

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:47:59) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round((s,2))

		
-- EXECUTION TIME:
0.212272
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:14) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round(sum(s,2))

		
-- EXECUTION TIME:
0.133537
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:15) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round(sum(s,2))

		
-- EXECUTION TIME:
0.135592
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:15) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round(sum(s,2))

		
-- EXECUTION TIME:
0.185432
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:16) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round(sum(s,2))

		
-- EXECUTION TIME:
0.280816
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:16) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
				
print(round(sum(s,2))

		
-- EXECUTION TIME:
0.325534
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:37) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
		s=s+vetor[i]
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		s=s+vetor[i]
		i=i+1
print(round(s,2))				

		
-- EXECUTION TIME:
0.136343
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:50:16) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		
		i=i+1
print(round(s,2))				

		
-- EXECUTION TIME:
0.150271
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:50:25) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		
		i=i+1
print(sum(round(s,2))				

		
-- EXECUTION TIME:
0.132598
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:50:32) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		
		i=i+1
print(sum(round(vetor,2))				

		
-- EXECUTION TIME:
0.150807
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:51:02) 
-- CODE:
from numpy import *
vetor=array(eval(int(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		
		
		i=i+1
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.16929
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:51:42) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.137136
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:49) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
print(sum(round(vetor,2)))				

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:20) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
	i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.206918
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:25) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.17046
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:35) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
	i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.163399
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:37) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
s=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:46) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.147782
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:47) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.187688
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:48) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.210936
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:48) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.240546
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:48) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.423671
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:48) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.318794
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:48) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		
	else:
		vetor[i]=vetor[i]
i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.647749
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:53:37) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
	else:
		vetor[i]=vetor[i]
		i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.14805
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:46) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
		
print(sum(round(vetor,2)))				

		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:53:47) 
-- CODE:
from numpy import *
vetor=array(eval(float(input('digite:   ')))
i=0
while(i < len(vetor)):
	if(vetor[i]>80):
		vetor[i]=vetor[i] - 5
		i=i+1
	else:
		vetor[i]=vetor[i]
		i=i+1
		
print(sum(round(vetor,2)))				

		
-- EXECUTION TIME:
0.135513
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 3
    i=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
